Creado mediante Colaboratory

--- a/EstandaresInformacion/01_EstandaresInformacion.ipynb
+++ b/EstandaresInformacion/01_EstandaresInformacion.ipynb
@@ -274,27 +274,27 @@
       ],
       "metadata": {
         "id": "qhPCvkZwyKJi",
-        "outputId": "479cac06-6274-46e5-cff4-f545c9419038",
+        "outputId": "450a16dd-d37b-4147-da93-4dd8fb9cc1c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-01-19 07:09:59--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/Estandares/ManejoDatos9180.json\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2022-01-20 23:51:10--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/Estandares/ManejoDatos9180.json\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 780 [text/plain]\n",
+            "Length: 781 [text/plain]\n",
             "Saving to: ‘ManejoDatos9180.json’\n",
             "\n",
-            "\rManejoDatos9180.jso   0%[                    ]       0  --.-KB/s               \rManejoDatos9180.jso 100%[===================>]     780  --.-KB/s    in 0s      \n",
+            "ManejoDatos9180.jso 100%[===================>]     781  --.-KB/s    in 0s      \n",
             "\n",
-            "2022-01-19 07:09:59 (37.6 MB/s) - ‘ManejoDatos9180.json’ saved [780/780]\n",
+            "2022-01-20 23:51:11 (29.2 MB/s) - ‘ManejoDatos9180.json’ saved [781/781]\n",
             "\n"
           ]
         }
@@ -423,7 +423,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -463,15 +463,113 @@
       "source": [
         "# *JSON + PYTHON + MySQL*\n",
         "\n",
-        "Una vez que se comprendió el uso del estándar *JSON* y *Python*, ahora podemos combinarlo con el poder de un manejador de bases de datos, como lo es *MySQL*.\n",
+        "Supongamos que ya se descargo el documento *ManejoDatos9180.json*, ahora la idea sería almacenarlo en la base de datos, para tal fin ya se cuenta con una nueva tabla dentro de la base *FCiencias* llamada *JSON*.\n",
         "\n",
-        "Como se mencionó en un principio el objetivo de los estándares para compartir información es que, sin importar el entorno en que esta se procese, la información pueda ser compartida mediante estos estándares.\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Estandares/json.png?raw=1\" width=\"600\"> \n",
+        "</center>\n",
         "\n",
-        "Es por este mótivo que el estándar *JSON* es ideal para compartir información y mediante *MySQL* almacenar estos datos, usando *Python* como lenguaje de alto nivel."
+        "El usuario *manejo* cuenta con privilegios tanto para realizar INSERT como para realizar SELECT sobre esta tabla, así que ya podémos subir los datos del documento *ManejoDatos9180.json* a esta tabla.\n",
+        "\n",
+        "En la siguiente celda de código se muestra este proceso."
       ],
       "metadata": {
         "id": "EezJ2bb5jb6-"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install mysql-connector-python"
+      ],
+      "metadata": {
+        "id": "sD0AY9vl-A9B",
+        "outputId": "34cffa05-6383-41e9-f837-7b4faa93e7ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting mysql-connector-python\n",
+            "  Downloading mysql_connector_python-8.0.28-cp37-cp37m-manylinux1_x86_64.whl (37.6 MB)\n",
+            "\u001b[K     |████████████████████████████████| 37.6 MB 460 kB/s \n",
+            "\u001b[?25hRequirement already satisfied: protobuf>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from mysql-connector-python) (3.17.3)\n",
+            "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.7/dist-packages (from protobuf>=3.0.0->mysql-connector-python) (1.15.0)\n",
+            "Installing collected packages: mysql-connector-python\n",
+            "Successfully installed mysql-connector-python-8.0.28\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# importamos el modulo json\n",
+        "import json\n",
+        "import mysql.connector\n",
+        "\n",
+        "con = mysql.connector.connect(host=\"hpc-matematicas-z.fciencias.unam.mx\",    \n",
+        "   user=\"manejo\", \n",
+        "   password=\"prometeo\",\n",
+        "   database=\"FCiencias\")\n",
+        "\n",
+        "cursor = con.cursor()\n",
+        "\n",
+        "def insertar_alumno(nombre, carrera, correo, telefono):\n",
+        "  consulta = ('INSERT INTO JSON (nombre, carrera, correo, telefono) '\n",
+        "  'VALUES (%s,%s,%s,%s)')\n",
+        "  cursor.execute(consulta, (nombre, carrera, correo, int(telefono)))\n",
+        "  con.commit()\n",
+        "\n",
+        "\n",
+        "with open('ManejoDatos9180.json') as archivo:\n",
+        "    datos = json.load(archivo)\n",
+        "    for alumno in datos['alumnos']:\n",
+        "      print(alumno['Telefono'])\n",
+        "      insertar_alumno(alumno['Nombre'], alumno['Carrera'], alumno['Correo'],\n",
+        "                      alumno['Telefono'])"
+      ],
+      "metadata": {
+        "id": "nzsnhRqc7eo-",
+        "outputId": "73274576-db36-4fb5-c9e7-65aeb3dce6ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 448
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4463528288\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "DataError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mMySQLInterfaceError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/mysql/connector/connection_cext.py\u001b[0m in \u001b[0;36mcmd_query\u001b[0;34m(self, query, raw, buffered, raw_as_string)\u001b[0m\n\u001b[1;32m    525\u001b[0m                                \u001b[0mraw_as_string\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mraw_as_string\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 526\u001b[0;31m                                query_attrs=self._query_attrs)\n\u001b[0m\u001b[1;32m    527\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mMySQLInterfaceError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mMySQLInterfaceError\u001b[0m: Out of range value for column 'telefono' at row 1",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mDataError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-34-d00ceeb90143>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malumno\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Telefono'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m       insertar_alumno(alumno['Nombre'], alumno['Carrera'], alumno['Correo'],\n\u001b[0;32m---> 24\u001b[0;31m                       alumno['Telefono'])\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-34-d00ceeb90143>\u001b[0m in \u001b[0;36minsertar_alumno\u001b[0;34m(nombre, carrera, correo, telefono)\u001b[0m\n\u001b[1;32m     13\u001b[0m   consulta = ('INSERT INTO JSON (nombre, carrera, correo, telefono) '\n\u001b[1;32m     14\u001b[0m   'VALUES (%s,%s,%s,%s)')\n\u001b[0;32m---> 15\u001b[0;31m   \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconsulta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnombre\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcarrera\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcorreo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtelefono\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m   \u001b[0mcon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/mysql/connector/cursor_cext.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, operation, params, multi)\u001b[0m\n\u001b[1;32m    269\u001b[0m             result = self._cnx.cmd_query(stmt, raw=self._raw,\n\u001b[1;32m    270\u001b[0m                                          \u001b[0mbuffered\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_buffered\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 271\u001b[0;31m                                          raw_as_string=self._raw_as_string)\n\u001b[0m\u001b[1;32m    272\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mMySQLInterfaceError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    273\u001b[0m             raise errors.get_mysql_exception(msg=exc.msg, errno=exc.errno,\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/mysql/connector/connection_cext.py\u001b[0m in \u001b[0;36mcmd_query\u001b[0;34m(self, query, raw, buffered, raw_as_string)\u001b[0m\n\u001b[1;32m    527\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mMySQLInterfaceError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    528\u001b[0m             raise errors.get_mysql_exception(exc.errno, msg=exc.msg,\n\u001b[0;32m--> 529\u001b[0;31m                                              sqlstate=exc.sqlstate)\n\u001b[0m\u001b[1;32m    530\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    531\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_unix_socket\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mDataError\u001b[0m: 1264 (22003): Out of range value for column 'telefono' at row 1"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
