Creado mediante Colaboratory

--- a/EstandaresInformacion/01_EstandaresInformacion.ipynb
+++ b/EstandaresInformacion/01_EstandaresInformacion.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "01_EstandaresInformacion.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -483,36 +482,42 @@
         "!pip install mysql-connector-python"
       ],
       "metadata": {
-        "id": "sD0AY9vl-A9B",
-        "outputId": "34cffa05-6383-41e9-f837-7b4faa93e7ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sD0AY9vl-A9B",
+        "outputId": "55ea1280-68a8-4a56-e475-b918f17316c9"
       },
-      "execution_count": 4,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting mysql-connector-python\n",
-            "  Downloading mysql_connector_python-8.0.28-cp37-cp37m-manylinux1_x86_64.whl (37.6 MB)\n",
-            "\u001b[K     |████████████████████████████████| 37.6 MB 460 kB/s \n",
-            "\u001b[?25hRequirement already satisfied: protobuf>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from mysql-connector-python) (3.17.3)\n",
-            "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.7/dist-packages (from protobuf>=3.0.0->mysql-connector-python) (1.15.0)\n",
-            "Installing collected packages: mysql-connector-python\n",
-            "Successfully installed mysql-connector-python-8.0.28\n"
+            "Requirement already satisfied: mysql-connector-python in /usr/local/lib/python3.7/dist-packages (8.0.28)\n",
+            "Requirement already satisfied: protobuf>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from mysql-connector-python) (3.17.3)\n",
+            "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.7/dist-packages (from protobuf>=3.0.0->mysql-connector-python) (1.15.0)\n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Insertar desde *JSON*"
+      ],
+      "metadata": {
+        "id": "9TfKGhI0Oidh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# importamos el modulo json\n",
+        "# importamos el modulo json y mysql\n",
         "import json\n",
         "import mysql.connector\n",
         "\n",
+        "# se abre la conexion a la bd\n",
         "con = mysql.connector.connect(host=\"hpc-matematicas-z.fciencias.unam.mx\",    \n",
         "   user=\"manejo\", \n",
         "   password=\"prometeo\",\n",
@@ -520,62 +525,44 @@
         "\n",
         "cursor = con.cursor()\n",
         "\n",
+        "# funcion que nos permite realizar INSERTS en la base de datos\n",
         "def insertar_alumno(nombre, carrera, correo, telefono):\n",
         "  consulta = ('INSERT INTO JSON (nombre, carrera, correo, telefono) '\n",
         "  'VALUES (%s,%s,%s,%s)')\n",
         "  cursor.execute(consulta, (nombre, carrera, correo, int(telefono)))\n",
         "  con.commit()\n",
         "\n",
-        "\n",
+        "# se lee el archivo JSON y se almacena la info en la bd\n",
         "with open('ManejoDatos9180.json') as archivo:\n",
         "    datos = json.load(archivo)\n",
         "    for alumno in datos['alumnos']:\n",
-        "      print(alumno['Telefono'])\n",
         "      insertar_alumno(alumno['Nombre'], alumno['Carrera'], alumno['Correo'],\n",
-        "                      alumno['Telefono'])"
+        "                      alumno['Telefono'])\n",
+        "\n",
+        "cursor.close()   \n",
+        "con.close()"
       ],
       "metadata": {
-        "id": "nzsnhRqc7eo-",
-        "outputId": "73274576-db36-4fb5-c9e7-65aeb3dce6ab",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 448
-        }
+        "id": "nzsnhRqc7eo-"
       },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "4463528288\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "DataError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mMySQLInterfaceError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/mysql/connector/connection_cext.py\u001b[0m in \u001b[0;36mcmd_query\u001b[0;34m(self, query, raw, buffered, raw_as_string)\u001b[0m\n\u001b[1;32m    525\u001b[0m                                \u001b[0mraw_as_string\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mraw_as_string\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 526\u001b[0;31m                                query_attrs=self._query_attrs)\n\u001b[0m\u001b[1;32m    527\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mMySQLInterfaceError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mMySQLInterfaceError\u001b[0m: Out of range value for column 'telefono' at row 1",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mDataError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-34-d00ceeb90143>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malumno\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Telefono'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m       insertar_alumno(alumno['Nombre'], alumno['Carrera'], alumno['Correo'],\n\u001b[0;32m---> 24\u001b[0;31m                       alumno['Telefono'])\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-34-d00ceeb90143>\u001b[0m in \u001b[0;36minsertar_alumno\u001b[0;34m(nombre, carrera, correo, telefono)\u001b[0m\n\u001b[1;32m     13\u001b[0m   consulta = ('INSERT INTO JSON (nombre, carrera, correo, telefono) '\n\u001b[1;32m     14\u001b[0m   'VALUES (%s,%s,%s,%s)')\n\u001b[0;32m---> 15\u001b[0;31m   \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconsulta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnombre\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcarrera\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcorreo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtelefono\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m   \u001b[0mcon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/mysql/connector/cursor_cext.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, operation, params, multi)\u001b[0m\n\u001b[1;32m    269\u001b[0m             result = self._cnx.cmd_query(stmt, raw=self._raw,\n\u001b[1;32m    270\u001b[0m                                          \u001b[0mbuffered\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_buffered\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 271\u001b[0;31m                                          raw_as_string=self._raw_as_string)\n\u001b[0m\u001b[1;32m    272\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mMySQLInterfaceError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    273\u001b[0m             raise errors.get_mysql_exception(msg=exc.msg, errno=exc.errno,\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/mysql/connector/connection_cext.py\u001b[0m in \u001b[0;36mcmd_query\u001b[0;34m(self, query, raw, buffered, raw_as_string)\u001b[0m\n\u001b[1;32m    527\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mMySQLInterfaceError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    528\u001b[0m             raise errors.get_mysql_exception(exc.errno, msg=exc.msg,\n\u001b[0;32m--> 529\u001b[0;31m                                              sqlstate=exc.sqlstate)\n\u001b[0m\u001b[1;32m    530\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    531\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_unix_socket\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mDataError\u001b[0m: 1264 (22003): Out of range value for column 'telefono' at row 1"
-          ]
-        }
-      ]
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Construir un *JSON* desde *MySQL*"
+      ],
+      "metadata": {
+        "id": "CXLjvgiJOniu"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "# se importa la biblioteca necesaria\n",
         "import mysql.connector\n",
+        "import json\n",
         "\n",
         "# asignamos las credenciales de conexion y se establece la conexion\n",
         "con = mysql.connector.connect(host=\"hpc-matematicas-z.fciencias.unam.mx\",    \n",
@@ -583,53 +570,44 @@
         "   password=\"prometeo\",\n",
         "   database=\"FCiencias\")\n",
         "\n",
-        "# obtenemos un cursor para realizar consultas\n",
-        "cursor = con.cursor()\n",
+        "# funcion que nos permite realizar INSERTS en la base de datos\n",
+        "def creaJSON():\n",
+        "  cursor = con.cursor()\n",
+        "  consulta = ('select * from JSON')\n",
+        "  cursor.execute(consulta,)\n",
         "\n",
-        "# consulta en forma de cadena\n",
-        "#consulta = ('SELECT * FROM alumnos')\n",
+        "  # diccionario donde se almacenan los datos\n",
+        "  datos = {}\n",
         "\n",
-        "consulta = ('SELECT num_cuenta, nombre, nombre_tutor, nombre_especialidad '\n",
-        "'FROM tutorias natural join alumnos natural join tutores natural join '\n",
-        "'especialidades')\n",
+        "  # llave que indica el elemento alumnos\n",
+        "  datos['alumnos'] = []\n",
         "\n",
-        "# ejecucion de la consulta a la base de datos\n",
-        "cursor.execute(consulta)\n",
+        "  for tupla in cursor:\n",
+        "    # agregamos el primer alumno\n",
+        "    datos['alumnos'].append({\n",
+        "      \"Nombre\": tupla[1],\t\n",
+        "      \"Carrera\": tupla[2],\n",
+        "      \"Correo\": tupla[3],\n",
+        "      \"Telefono\": tupla[4]})\n",
+        "  \n",
+        "  # se cierra el cursor y la conexion\n",
+        "  cursor.close()\n",
+        "  con.close()\n",
         "\n",
-        "# se itera sobre el objeto cursor\n",
-        "for tupla in cursor:\n",
-        "  print(tupla)\n",
+        "  # usamos la funcion open para crear un documento\n",
+        "  with open('CreaJSON.json', 'w') as archivo:\n",
+        "    # se vacia el diccionario en el documento\n",
+        "    json.dump(datos, archivo, indent=4, ensure_ascii=False)\n",
         "\n",
-        "# se cierra el cursor y la conexion\n",
-        "cursor.close()\n",
-        "con.close()"
+        "# se llama a la funcion para crear JSON\n",
+        "creaJSON()\n",
+        "  "
       ],
       "metadata": {
-        "id": "zMenfW19exVG",
-        "outputId": "f2f5df19-4237-4fb7-bf68-99321cdc3684",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "zMenfW19exVG"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(1, 'Mike', 'Mark Musk', 'ciencia de datos')\n",
-            "(2, 'Pedro', 'Miguel de Icaza', 'ciencias de la computacion')\n",
-            "(3, 'Peter', 'Mario Molina', 'actuaria')\n",
-            "(4, 'Almendra', 'Charles Darwin', 'biologia')\n",
-            "(5, 'Alvaro', 'Isaac Newton', 'matematicas')\n",
-            "(6, 'Canek', 'Mark Musk', 'ciencia de datos')\n",
-            "(7, 'Sonia', 'Miguel de Icaza', 'ciencias de la computacion')\n",
-            "(8, 'Arturo', 'Mark Musk', 'ciencia de datos')\n",
-            "(9, 'Gisel', 'Charles Darwin', 'biologia')\n",
-            "(10, 'Alfa', 'Isaac Newton', 'matematicas')\n"
-          ]
-        }
-      ]
+      "execution_count": 50,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
