Creado mediante Colaboratory

--- a/EstandaresInformacion/01_EstandaresInformacion.ipynb
+++ b/EstandaresInformacion/01_EstandaresInformacion.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "01_EstandaresInformacion.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -278,7 +279,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,7 +471,7 @@
         "\n",
         "El usuario *manejo* cuenta con privilegios tanto para realizar INSERT como para realizar SELECT sobre esta tabla, así que ya podémos subir los datos del documento *ManejoDatos9180.json* a esta tabla.\n",
         "\n",
-        "En la siguiente celda de código se muestra este proceso."
+        "Para poder acceder a la base de datos, necesitamos instalar el conector de *MySQL* que hemos usado previamente."
       ],
       "metadata": {
         "id": "EezJ2bb5jb6-"
@@ -486,17 +487,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sD0AY9vl-A9B",
-        "outputId": "55ea1280-68a8-4a56-e475-b918f17316c9"
+        "outputId": "04e76f21-7575-4659-8c82-90124ff8f763"
       },
-      "execution_count": 37,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: mysql-connector-python in /usr/local/lib/python3.7/dist-packages (8.0.28)\n",
-            "Requirement already satisfied: protobuf>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from mysql-connector-python) (3.17.3)\n",
-            "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.7/dist-packages (from protobuf>=3.0.0->mysql-connector-python) (1.15.0)\n"
+            "Collecting mysql-connector-python\n",
+            "  Downloading mysql_connector_python-8.0.28-cp37-cp37m-manylinux1_x86_64.whl (37.6 MB)\n",
+            "\u001b[K     |████████████████████████████████| 37.6 MB 1.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: protobuf>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from mysql-connector-python) (3.17.3)\n",
+            "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.7/dist-packages (from protobuf>=3.0.0->mysql-connector-python) (1.15.0)\n",
+            "Installing collected packages: mysql-connector-python\n",
+            "Successfully installed mysql-connector-python-8.0.28\n"
           ]
         }
       ]
@@ -504,7 +509,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Insertar desde *JSON*"
+        "### Insertar desde *JSON*\n",
+        "\n",
+        "Para llevar a cabo esta tarea primero vamos a necesitar establecer la **comunicación con la base de datos**.\n",
+        "\n",
+        "Una vez establecida la comunicación lo siguiente es definir un método que nos permita insertar los datos almacenados en el documento *JSON*.\n",
+        "\n",
+        "Y por último, acceder a los datos en el documento *JSON* para poder descargar esos datos directamente en la base de datos."
       ],
       "metadata": {
         "id": "9TfKGhI0Oidh"
@@ -545,13 +556,19 @@
       "metadata": {
         "id": "nzsnhRqc7eo-"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Construir un *JSON* desde *MySQL*"
+        "### Construir un *JSON* desde *MySQL*\n",
+        "\n",
+        "Esta labor es la operación inversa a lo hecho en la celda superior.\n",
+        "\n",
+        "En este caso lo que vamos a hace es acceder a la base da datos y con los datos dentro de la misma construir un documento de tipo *JSON*.\n",
+        "\n",
+        "Al final este documento de tipo *JSON* se puede compartir y el mismo contiene la información necesaria para poblar la base de datos."
       ],
       "metadata": {
         "id": "CXLjvgiJOniu"
@@ -582,8 +599,10 @@
         "  # llave que indica el elemento alumnos\n",
         "  datos['alumnos'] = []\n",
         "\n",
+        "  # con los datos de los alumnos en el cursor solo hace falta \n",
+        "  # agregarlos al documento JSON\n",
         "  for tupla in cursor:\n",
-        "    # agregamos el primer alumno\n",
+        "    # agregamos los datos de los alumnos\n",
         "    datos['alumnos'].append({\n",
         "      \"Nombre\": tupla[1],\t\n",
         "      \"Carrera\": tupla[2],\n",
@@ -606,7 +625,7 @@
       "metadata": {
         "id": "zMenfW19exVG"
       },
-      "execution_count": 50,
+      "execution_count": 2,
       "outputs": []
     },
     {
