Creado mediante Colaboratory

--- a/EstandaresInformacion/01_EstandaresInformacion.ipynb
+++ b/EstandaresInformacion/01_EstandaresInformacion.ipynb
@@ -489,7 +489,7 @@
         "id": "sD0AY9vl-A9B",
         "outputId": "04e76f21-7575-4659-8c82-90124ff8f763"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -625,8 +625,17 @@
       "metadata": {
         "id": "zMenfW19exVG"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Una vez más si usamos el **navegador de archivos** de *google colab*, podemos notar que el archivo *creaJSON.json* contiene la información de la base da datos."
+      ],
+      "metadata": {
+        "id": "YvwUGFsO_AFN"
+      }
     },
     {
       "cell_type": "markdown",
