Creado mediante Colaboratory

--- a/Introduccion/00_Introduccion.ipynb
+++ b/Introduccion/00_Introduccion.ipynb
@@ -6,7 +6,7 @@
       "name": "Introduccion.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPiFT6sY6KYyDXxoPOzGkJX",
+      "authorship_tag": "ABX9TyNoAKWEQBnA5gSFqwiDgjTn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -468,7 +468,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/main/Introduccion/00_Introduccion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/desarrollo/Introduccion/00_Introduccion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -482,7 +482,8 @@
         "  <h2 align=\"center\"><i>Introducción</i></h2>\n",
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
-        "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
+        "  <h5 align=\"center\"><i>Profesor: M. en C. Miguel Angel Pérez León</i></h5>\n",
+        "  <h5 align=\"center\"><i>Ayudante: Jonathan Natael Ramírez Montes</i></h5>\n",
         "  <h5 align=\"center\"><i>Ayudante: Jesús Iván Calderón Coss</i></h5>\n",
         "  <h5 align=\"center\"><i>correo: zeus@ciencias.unam.mx</i></h5>\n",
         "  </font>"
@@ -1040,7 +1041,7 @@
         "# con este comando de Linux clonamos el repositorio prometeo\n",
         "!git clone --branch ligera https://github.com/jugernaut/Prometeo.git"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1097,7 +1098,7 @@
         "# se ejecuta uno de los jupyter dentro de Prometeo\n",
         "%run ./Prometeo/01_Calculo/04_Derivadas/zInteractivoDerivadasLight.ipynb"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
