Creado mediante Colaboratory

--- a/Introduccion/02_TensorFlow2.ipynb
+++ b/Introduccion/02_TensorFlow2.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/main/Introduccion/02_TensorFlow2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/desarrollo/Introduccion/02_TensorFlow2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,8 +37,8 @@
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
         "  <h5 align=\"center\"><i>Profesor: M. en C. Miguel Angel Pérez León</i></h5>\n",
+        "    <h5 align=\"center\"><i>Ayudante: Jonathan Natael Ramírez Montes</i></h5>\n",
         "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
-        "    <h5 align=\"center\"><i>Ayudante: \tJonathan Natael Ramírez Montes</i></h5>\n",
         "  <h5 align=\"center\"><i>Materia: Manejo de Datos</i></h5>\n",
         "  </font>"
       ]
@@ -90,7 +90,7 @@
         "print(tf.config.list_physical_devices('GPU'))\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,7 +422,7 @@
         "fashion_mnist = keras.datasets.fashion_mnist\n",
         "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -515,7 +515,7 @@
         "class_names = ['Camiseta/Blusa', 'Trusa', 'Pullover', 'Vestido', 'Abrigo',\n",
         "               'Sandalia', 'Camisa', 'Sneaker', 'Bolsa', 'Bota al tobillo']"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -541,7 +541,7 @@
       "source": [
         "train_images.shape"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -733,7 +733,7 @@
         "plt.grid(False)\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -767,7 +767,7 @@
         "train_images = train_images / 255.0\n",
         "test_images = test_images / 255.0"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -800,7 +800,7 @@
         "    plt.xlabel(class_names[train_labels[i]])\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -845,7 +845,7 @@
         "    keras.layers.Dense(10, activation='softmax')\n",
         "])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -889,7 +889,7 @@
         "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -921,7 +921,7 @@
       "source": [
         "model.fit(train_images, train_labels, epochs=10)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -980,7 +980,7 @@
       "source": [
         "predicciones = model.predict(test_images)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1020,7 +1020,7 @@
         "  thisplot[predicted_label].set_color('red')\n",
         "  thisplot[true_label].set_color('blue')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1051,7 +1051,7 @@
         "plot_value_array(i, predicciones[i],  test_labels)\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1095,7 +1095,7 @@
         "plot_value_array(i, predicciones[i],  test_labels)\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
